# public-gateway-mcp

./: README.md  pyproject.toml
src/public_gateway_mcp/: __init__.py  server.py
